[gd_scene load_steps=12 format=3 uid="uid://account-ui"]

[ext_resource type="Script" uid="uid://script" path="res://scripts/ui/AccountUI.gd" id="1"]

[node name="AccountUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]

[node name="TopBar/Nickname" type="Label" parent="TopBar"]
text = "PlayerName"

[node name="TopBar/Spacer" type="Control" parent="TopBar"]
size_flags_horizontal = 3

[node name="TopBar/Currency" type="Label" parent="TopBar"]
text = "Currency: 0"

[node name="MainHBox" type="HBoxContainer" parent="."]

[node name="MainHBox/Sidebar" type="VBoxContainer" parent="MainHBox"]

[node name="Sidebar/CreateHero" type="Button" parent="Sidebar"]
text = "Create Hero"
[node name="Sidebar/TrainHero" type="Button" parent="Sidebar"]
text = "Train Hero"
[node name="Sidebar/Auction" type="Button" parent="Sidebar"]
text = "Auction"
[node name="Sidebar/Battle" type="Button" parent="Sidebar"]
text = "To Battle"
[node name="Sidebar/Inventory" type="Button" parent="Sidebar"]
text = "Inventory"
[node name="Sidebar/Deleted" type="Button" parent="Sidebar"]
text = "Deleted Heroes"

[node name="MainHBox/ContentStack" type="StackContainer" parent="MainHBox"]
# each window will be a child of this stack

[node name="MainHBox/StatsPanel" type="VBoxContainer" parent="MainHBox"]

[node name="StatsPanel/StatPanelInstance" instance=ExtResource("uid://statpanel" )]

[node name="ChatSection" type="VBoxContainer" parent="."]

[node name="ChatSection/Chat" instance=ExtResource("uid://chatpanel")]

[node name="BottomBar" type="HBoxContainer" parent="."]

[node name="BottomBar/Settings" type="Button" parent="BottomBar"]
text = "Settings"
[node name="BottomBar/Logout" type="Button" parent="BottomBar"]
text = "Logout"
